# LearnOpenGL

./: .gitignore  CMakeLists.txt  README.md  glad.c  main.cpp
include/: glad.h
utils/: camera.h  glutils.cpp  glutils.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  shadersource.h  shapeutils.cpp  shapeutils.h
utils/shaders/: depthTesting.fs  depthTesting.vs  fragment.shader  geometry.shader  lightFragment.shader  lightVertex.shader  plant.shader  rectangle.fs  skybox.fs  skybox.vs  vertex.shader
